--- a/contact.html
+++ b/contact.html
@@ -5,23 +5,15 @@
 
       <p>Please email us to support@computersolutions.fake</p>
       <h3>Locations</h3>
-      <ul class="location">
-         <li>Lynn Location</li>
-         <li>333 Walnut St</li>
-         <li>Lynn MA, 01902</li>
-         <li>781-555-5555</li>
-      </ul>
-      <ul class="location">
-         <li>Lynn Location</li>
-         <li>333 Walnut St</li>
-         <li>Lynn MA, 01902</li>
-         <li>781-555-5555</li>
-      </ul>
-      <ul class="location">
-         <li>Lynn Location</li>
-         <li>333 Walnut St</li>
-         <li>Lynn MA, 01902</li>
-         <li>781-555-5555</li>
-      </ul>
+
+      <div ng-repeat="location in locations">
+         <ul class="location">
+            <li>{{location.name}}</li>
+            <li>{{location.street_address}}</li>
+            <li>{{location.city}} {{location.state}}, {{location.zip}}</li>
+            <li>{{location.phone}}</li>
+         </ul>
+      </div>
+
    </div>
 </div>
