--- a/main.html
+++ b/main.html
@@ -15,20 +15,11 @@
 
 <!-- Example row of columns -->
 <div class="row">
-   <div class="col-lg-4">
-      <h2>Hardware Repairs</h2>
-      <p class="text-danger">As of v9.1.2, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-   </div>
-   <div class="col-lg-4">
-      <h2>Virus Removal</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-   </div>
-   <div class="col-lg-4">
-      <h2>System Tuneup</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+   <div ng-repeat="service in services">
+      <div class="col-lg-4">
+         <h2>{{service.name}}</h2>
+         <p>{{service.description}}</p>
+         <p><a class="btn btn-primary" href="#/contact" role="button">View details &raquo;</a></p>
+      </div>
    </div>
 </div>
